--- a/practice/Data Cleaning and EDA.ipynb
+++ b/practice/Data Cleaning and EDA.ipynb
@@ -2404,7 +2404,9 @@
    "id": "00837782",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# test git"
+   ]
   },
   {
    "cell_type": "code",
